--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 body{
 margin: 0px 0px;
-background: url(https://elegantecasa.ru/wa-data/public/shop/products/37/17/161737/images/263828/263828.750x0.jpg);
+background: url(https://avatars.mds.yandex.net/i?id=c02a1e5ce10a3a33754983702ab14984-7047298-images-thumbs&n=13);
 }
 header{
 margin: 0px;
