--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 body{
 margin: 0px 0px;
-background: url(https://avatars.mds.yandex.net/i?id=c02a1e5ce10a3a33754983702ab14984-7047298-images-thumbs&n=13);
+background-image: url(picture\1643330207_2-kartinkin-net-p-pattern-kubi-krasivie-2);
 }
 header{
 margin: 0px;
