--- a/style/style.css
+++ b/style/style.css
@@ -32,7 +32,7 @@ background: url(https://images.ua.prom.st/1400665602_w640_h640_hlopkovaya-tkan-s
 }
 marquee{
     font-size: 1.5em;
-    color: white;
+    color: black;
 font-size: 1.5em;
 font-family: 'Lato', sans-serif;
 font-weight: 400;
