--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 body{
 margin: 0px 0px;
-background-image: url(picture/1643330207_2-kartinkin-net-p-pattern-kubi-krasivie-2.png);
+background:url(picture/1643330207_2-kartinkin-net-p-pattern-kubi-krasivie-2.png);
 }
 header{
 margin: 0px;
